--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.5",
     "server-only": "^0.0.1",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
