--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-start": "npm run build && npm run start"
   },
   "dependencies": {
     "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.42.3",
+    "@supabase/supabase-js": "^2.43.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.3",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
