--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
