fix:#78 task用issueテンプレートのカンバンボード自動追加・labelsの修正

--- a/.github/ISSUE_TEMPLATE/task_ticket.yml
+++ b/.github/ISSUE_TEMPLATE/task_ticket.yml
@@ -1,6 +1,7 @@
 name: Task Ticket
 description: タスクに関するIssueはこちら
-labels: ["task", "test"]
+labels: ["task"]
+projects: ["EnvHub/5"]
 body:
   - type: textarea
     id: goal
