fix:テンプレートymlのprojectsを修正する

--- a/.github/ISSUE_TEMPLATE/task_ticket.yml
+++ b/.github/ISSUE_TEMPLATE/task_ticket.yml
@@ -1,7 +1,7 @@
 name: Task Ticket
 description: タスクに関するIssueはこちら
 labels: ["task"]
-projects: ["EnvHub/5"]
+projects: ["warabimochi1126/5"]
 body:
   - type: textarea
     id: goal
