--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
+    "danger": "^12.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
