--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@supabase/supabase-js": "^2.43.1",
     "next": "14.1.4",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-spinners": "^0.13.8",
     "react-splide-ts": "^0.7.14",
+    "react-sweet-progress": "^1.1.2",
     "react-toastify": "^10.0.5",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
